# hotlist-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
dashboard/: index.html  template.html
data/: exclusions.json  hotlist_history.csv  movers.json  performance.csv  portfolio_state.json  trade_log.csv
scripts/: compute.py  email_digest.py  launchd_trigger.sh  movers.py  perf.py  render.py  scrape.py
