[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotlist-tracker"
version = "0.1.0"
description = "Daily scrape and analysis of the Trading 212 Hotlist for the Hotlist 10 portfolio rule."
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.45",
  "pandas>=2.2",
  "jinja2>=3.1",
  "yfinance>=0.2.40",
  "python-dateutil>=2.9",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
